Closed Bug 1653177 Opened 4 years ago Closed 4 years ago

Perma win mingw bustage /builds/worker/checkouts/gecko/dom/system/OSFileConstants.cpp:487:18: error: use of undeclared identifier 'S_IFLNK'

Categories

(Toolkit Graveyard :: OS.File, defect, P5)

defect

Tracking

(firefox-esr68 unaffected, firefox-esr78 unaffected, firefox78 unaffected, firefox79 unaffected, firefox80 fixed)

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mail)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=309953367&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/LODba7ROTmOfRihZLMhYOg/runs/0/artifacts/public/logs/live_backing.log


[task 2020-07-16T03:50:41.957Z] 03:50:41 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/serviceworkers'
[task 2020-07-16T03:50:42.502Z] 03:50:42 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/system'
[task 2020-07-16T03:50:42.506Z] 03:50:42 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o Unified_cpp_dom_system0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/system -I/builds/worker/workspace/obj-build/dom/system -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/checkouts/gecko/js/xpconnect/loader -I/builds/worker/checkouts/gecko/xpcom/base -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fexperimental-new-pass-manager -MD -MP -MF .deps/Unified_cpp_dom_system0.o.pp Unified_cpp_dom_system0.cpp
[task 2020-07-16T03:50:42.508Z] 03:50:42 INFO - In file included from Unified_cpp_dom_system0.cpp:11:
[task 2020-07-16T03:50:42.509Z] 03:50:42 ERROR - /builds/worker/checkouts/gecko/dom/system/OSFileConstants.cpp:487:18: error: use of undeclared identifier 'S_IFLNK'
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - INT_CONSTANT(S_IFLNK),
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - ^
[task 2020-07-16T03:50:42.509Z] 03:50:42 ERROR - /builds/worker/checkouts/gecko/dom/system/OSFileConstants.cpp:488:18: error: use of undeclared identifier 'S_IFSOCK'
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - INT_CONSTANT(S_IFSOCK),
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - ^
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - 2 errors generated.
[task 2020-07-16T03:50:42.509Z] 03:50:42 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:748: Unified_cpp_dom_system0.o] Error 1
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/system'
[task 2020-07-16T03:50:42.509Z] 03:50:42 ERROR - make[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: dom/system/target-objects] Error 2
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - make[3]: *** Waiting for unfinished jobs....
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/dom/serviceworkers'
[task 2020-07-16T03:50:42.509Z] 03:50:42 INFO - dom/serviceworkers/Unified_cpp_dom_serviceworkers3.o

Set release status flags based on info from the regressing bug 1651742

Hi Cosmin, looking at OSFileConstants.cpp:479-489, these identifiers are only used if S_IFIFO is defined.

I understand that I was working within the same compilation unit that seems to have caused this regression, but I am surprised that any of my changes were the root cause of this build failure, since it has to do with non-existing identifiers in a file I have never modified, and I haven't used any of these constants before.

I'm tagging Barret, since he's my mentor for this summer, and might have some better idea about this breakage.

[task 2020-07-16T04:11:42.695Z] 04:11:42    ERROR -  /builds/worker/checkouts/gecko/dom/system/OSFileConstants.cpp:487:18: error: use of undeclared identifier 'S_IFLNK'
[task 2020-07-16T04:11:42.695Z] 04:11:42     INFO -      INT_CONSTANT(S_IFLNK),
[task 2020-07-16T04:11:42.695Z] 04:11:42     INFO -                   ^
[task 2020-07-16T04:11:42.695Z] 04:11:42    ERROR -  /builds/worker/checkouts/gecko/dom/system/OSFileConstants.cpp:488:18: error: use of undeclared identifier 'S_IFSOCK'
[task 2020-07-16T04:11:42.695Z] 04:11:42     INFO -      INT_CONSTANT(S_IFSOCK),
Flags: needinfo?(krourke) → needinfo?(brennie)

This patch attempts to fix the permanent win mingw build failure caused
by use of the undeclared identifiers 'S_IFLNK' and 'S_IFSOCK' in
dom/system/OSFileConstants.cpp

These identifiers are only ever declared on Unix systems (Linux, macOS,
Android, etc.), so the ifdef guard around the use of these constants
has been updated appropriately.

Assignee: nobody → krourke
Status: NEW → ASSIGNED
Pushed by brennie@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6ae542c7cd01
Fix minGW build failure due to use of missing identifiers r=Yoric,barret
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Flags: needinfo?(brennie)
Has Regression Range: --- → yes
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: