Bug 1653177: Fix minGW build failure due to use of missing identifiers r=Yoric,barret

This patch attempts to fix the permanent win mingw build failure caused
by use of the undeclared identifiers 'S_IFLNK' and 'S_IFSOCK' in
dom/system/OSFileConstants.cpp

These identifiers are only ever declared on Unix systems (Linux, macOS,
Android, etc.), so the `ifdef` guard around the use of these constants
has been updated appropriately.

Differential Revision: https://phabricator.services.mozilla.com/D83844